0.22.x/_sources/api/skimage.util.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`skimage.util`
===================

.. automodule:: skimage.util

.. currentmodule:: skimage.util

.. autosummary::
   :nosignatures:

   skimage.util.apply_parallel
   skimage.util.compare_images
   skimage.util.crop
   skimage.util.dtype_limits
   skimage.util.img_as_bool
   skimage.util.img_as_float
   skimage.util.img_as_float32
   skimage.util.img_as_float64
   skimage.util.img_as_int
   skimage.util.img_as_ubyte
   skimage.util.img_as_uint
   skimage.util.invert
   skimage.util.label_points
   skimage.util.map_array
   skimage.util.montage
   skimage.util.random_noise
   skimage.util.regular_grid
   skimage.util.regular_seeds
   skimage.util.slice_along_axes
   skimage.util.unique_rows
   skimage.util.view_as_blocks
   skimage.util.view_as_windows



------------


.. autofunction:: skimage.util.apply_parallel

    .. minigallery:: skimage.util.apply_parallel

------------


.. autofunction:: skimage.util.compare_images

    .. minigallery:: skimage.util.compare_images

------------


.. autofunction:: skimage.util.crop

    .. minigallery:: skimage.util.crop

------------


.. autofunction:: skimage.util.dtype_limits

    .. minigallery:: skimage.util.dtype_limits

------------


.. autofunction:: skimage.util.img_as_bool

    .. minigallery:: skimage.util.img_as_bool

------------


.. autofunction:: skimage.util.img_as_float

    .. minigallery:: skimage.util.img_as_float

------------


.. autofunction:: skimage.util.img_as_float32

    .. minigallery:: skimage.util.img_as_float32

------------


.. autofunction:: skimage.util.img_as_float64

    .. minigallery:: skimage.util.img_as_float64

------------


.. autofunction:: skimage.util.img_as_int

    .. minigallery:: skimage.util.img_as_int

------------


.. autofunction:: skimage.util.img_as_ubyte

    .. minigallery:: skimage.util.img_as_ubyte

------------


.. autofunction:: skimage.util.img_as_uint

    .. minigallery:: skimage.util.img_as_uint

------------


.. autofunction:: skimage.util.invert

    .. minigallery:: skimage.util.invert

------------


.. autofunction:: skimage.util.label_points

    .. minigallery:: skimage.util.label_points

------------


.. autofunction:: skimage.util.map_array

    .. minigallery:: skimage.util.map_array

------------


.. autofunction:: skimage.util.montage

    .. minigallery:: skimage.util.montage

------------


.. autofunction:: skimage.util.random_noise

    .. minigallery:: skimage.util.random_noise

------------


.. autofunction:: skimage.util.regular_grid

    .. minigallery:: skimage.util.regular_grid

------------


.. autofunction:: skimage.util.regular_seeds

    .. minigallery:: skimage.util.regular_seeds

------------


.. autofunction:: skimage.util.slice_along_axes

    .. minigallery:: skimage.util.slice_along_axes

------------


.. autofunction:: skimage.util.unique_rows

    .. minigallery:: skimage.util.unique_rows

------------


.. autofunction:: skimage.util.view_as_blocks

    .. minigallery:: skimage.util.view_as_blocks

------------


.. autofunction:: skimage.util.view_as_windows

    .. minigallery:: skimage.util.view_as_windows

