0.26.x/_sources/api/skimage.util.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`skimage.util`
===================

.. automodule:: skimage.util

.. currentmodule:: skimage.util

.. autosummary::
   :nosignatures:

   apply_parallel
   compare_images
   crop
   dtype_limits
   img_as_bool
   img_as_float
   img_as_float32
   img_as_float64
   img_as_int
   img_as_ubyte
   img_as_uint
   invert
   label_points
   lookfor
   map_array
   montage
   random_noise
   regular_grid
   regular_seeds
   slice_along_axes
   unique_rows
   view_as_blocks
   view_as_windows

   FailedEstimationAccessError
   PendingSkimage2Change


------------


.. autofunction:: apply_parallel

    .. minigallery:: skimage.util.apply_parallel

------------


.. autofunction:: compare_images

    .. minigallery:: skimage.util.compare_images

------------


.. autofunction:: crop

    .. minigallery:: skimage.util.crop

------------


.. autofunction:: dtype_limits

    .. minigallery:: skimage.util.dtype_limits

------------


.. autofunction:: img_as_bool

    .. minigallery:: skimage.util.img_as_bool

------------


.. autofunction:: img_as_float

    .. minigallery:: skimage.util.img_as_float

------------


.. autofunction:: img_as_float32

    .. minigallery:: skimage.util.img_as_float32

------------


.. autofunction:: img_as_float64

    .. minigallery:: skimage.util.img_as_float64

------------


.. autofunction:: img_as_int

    .. minigallery:: skimage.util.img_as_int

------------


.. autofunction:: img_as_ubyte

    .. minigallery:: skimage.util.img_as_ubyte

------------


.. autofunction:: img_as_uint

    .. minigallery:: skimage.util.img_as_uint

------------


.. autofunction:: invert

    .. minigallery:: skimage.util.invert

------------


.. autofunction:: label_points

    .. minigallery:: skimage.util.label_points

------------


.. autofunction:: lookfor

    .. minigallery:: skimage.util.lookfor

------------


.. autofunction:: map_array

    .. minigallery:: skimage.util.map_array

------------


.. autofunction:: montage

    .. minigallery:: skimage.util.montage

------------


.. autofunction:: random_noise

    .. minigallery:: skimage.util.random_noise

------------


.. autofunction:: regular_grid

    .. minigallery:: skimage.util.regular_grid

------------


.. autofunction:: regular_seeds

    .. minigallery:: skimage.util.regular_seeds

------------


.. autofunction:: slice_along_axes

    .. minigallery:: skimage.util.slice_along_axes

------------


.. autofunction:: unique_rows

    .. minigallery:: skimage.util.unique_rows

------------


.. autofunction:: view_as_blocks

    .. minigallery:: skimage.util.view_as_blocks

------------


.. autofunction:: view_as_windows

    .. minigallery:: skimage.util.view_as_windows


.. autoclass:: FailedEstimationAccessError
  :members:
  :inherited-members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

    .. minigallery:: skimage.util.FailedEstimationAccessError


.. autoclass:: PendingSkimage2Change
  :members:
  :inherited-members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

    .. minigallery:: skimage.util.PendingSkimage2Change

